[package]
name = "aoc"
version = "0.1.0"
description = "command line tool to run advent of code puzzles and display output and timings"
authors = [ "Jan-Pieter Cornet <jp+aoc2021 -at- cornet.org>" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exrunner = { path = "../exrunner" }
clap = { version = "4.4.10", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["blocking"] }
comfy-table = "7.1.0"
day1_trebuchet = { path = "../day1_trebuchet" }
day2_cube_conundrum = { path = "../day2_cube_conundrum" }
day3_gear_ratios = { path = "../day3_gear_ratios" }
day4_scratchcards = { path = "../day4_scratchcards" }
day5_seed_fertilizer = { path = "../day5_seed_fertilizer" }
day6_wait_for_it = { path = "../day6_wait_for_it" }
day7_camel_cards = { path = "../day7_camel_cards" }
day8_haunted_wasteland = { path = "../day8_haunted_wasteland" }
day9_mirage_maintenance = { path = "../day9_mirage_maintenance" }
day10_pipe_maze = { path = "../day10_pipe_maze" }
day11_cosmic_expansion = { path = "../day11_cosmic_expansion" }
